# rasputin

./: meson.build
data/: meson.build  rasputin.desktop  rasputin.desktop.in  rasputin.ui
debian/: changelog  control  copyright
po/: POTFILES.in  en_GB.po  ja.po
src/: labwc.c  lxinput.c  meson.build  openbox.c  rasputin.c  rasputin.h  wayfire.c
